--- a/Themes/EmojiReplace/EmojiReplace.theme.css
+++ b/Themes/EmojiReplace/EmojiReplace.theme.css
@@ -36,6 +36,6 @@
 
 /*										   REPLACE THIS			*/
 /*										     ↓↓↓↓↓			*/
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/EmojiReplace/base/Apple.css);
+@import url(https://raw.githubusercontent.com/LabRatMime/BetterDiscordAddons/master/Themes/EmojiReplace/base/Samsung.css);
 /*										     ↑↑↑↑↑		  	*/
 /*										   REPLACE THIS			*/
