--- a/Themes/EmojiReplace/base/Samsung.css
+++ b/Themes/EmojiReplace/base/Samsung.css
@@ -1,11 +1,11 @@
 @import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/_res/ThemeDevBadge.css);
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/EmojiReplace/src/Samsung/spritesheets.css);
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/EmojiReplace/src/Samsung/people.css);
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/EmojiReplace/src/Samsung/nature.css);
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/EmojiReplace/src/Samsung/food.css);
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/EmojiReplace/src/Samsung/activity.css);
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/EmojiReplace/src/Samsung/travel.css);
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/EmojiReplace/src/Samsung/objects.css);
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/EmojiReplace/src/Samsung/symbols.css);
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/EmojiReplace/src/Samsung/flags.css);
+@import url(https://raw.githubusercontent.com/LabRatMime/BetterDiscordAddons/master/Themes/EmojiReplace/src/Samsung/spritesheets.css);
+@import url(https://raw.githubusercontent.com/LabRatMime/BetterDiscordAddons/master/Themes/EmojiReplace/src/Samsung/people.css);
+@import url(https://raw.githubusercontent.com/LabRatMime/BetterDiscordAddons/master/Themes/EmojiReplace/src/Samsung/nature.css);
+@import url(https://raw.githubusercontent.com/LabRatMime/BetterDiscordAddons/master/Themes/EmojiReplace/src/Samsung/food.css);
+@import url(https://raw.githubusercontent.com/LabRatMime/BetterDiscordAddons/master/Themes/EmojiReplace/src/Samsung/activity.css);
+@import url(https://raw.githubusercontent.com/LabRatMime/BetterDiscordAddons/master/Themes/EmojiReplace/src/Samsung/travel.css);
+@import url(https://raw.githubusercontent.com/LabRatMime/BetterDiscordAddons/master/Themes/EmojiReplace/src/Samsung/objects.css);
+@import url(https://raw.githubusercontent.com/LabRatMime/BetterDiscordAddons/master/Themes/EmojiReplace/src/Samsung/symbols.css);
+@import url(https://raw.githubusercontent.com/LabRatMime/BetterDiscordAddons/master/Themes/EmojiReplace/src/Samsung/flags.css);
 @namespace xlink 'http://www.w3.org/1999/xlink';
